--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -7,17 +7,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.4
-      - name: Generate Snake
-        uses: Platane/snk@master
-        id: snake-gif
+      - name: generate
+        uses: Platane/snk/svg-only@v2
         with:
           github_user_name: ${{ github.repository_owner }}
-          gif_out_path: ./assets/github-contribution-grid-snake.gif
-          svg_out_path: ./assets/github-contribution-grid-snake.svg
-      - name: Push to GitHub
-        uses: EndBug/add-and-commit@v7.2.1
+          outputs: |
+            assets/github-snake.svg?color_snake=orange
+      - name: push
+        uses: crazy-max/ghaction-github-pages@v2.6.0
         with:
-          branch: master
-          message: 'Generate Contribution Snake'
+          target_branch: master
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
