--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -7,20 +7,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
-      - name: generate github-contribution-grid-snake.svg
+      - name: generate
         uses: Platane/snk/svg-only@v2
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-      # push the content of <build_dir> to a branch
-      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
-      - name: push github-contribution-grid-snake.svg to the output branch
+            assets/github-snake.svg?color_snake=orange
+      - name: push
         uses: crazy-max/ghaction-github-pages@v2.6.0
         with:
-          target_branch: output
-          build_dir: dist
+          target_branch: snake
+          build_dir: assets
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
