--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -12,11 +12,11 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            assets/github-snake.svg?color_snake=orange
+            dist/github-snake.svg?color_snake=orange
       - name: push
         uses: crazy-max/ghaction-github-pages@v2.6.0
         with:
           target_branch: snake
-          build_dir: assets
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
